--- a/IC21.ipynb
+++ b/IC21.ipynb
@@ -12,7 +12,7 @@
         "KC2FHIVoEZqS"
       ],
       "mount_file_id": "1oXKpkwU3dHTbqgvzcSoU1vZFJApPci8-",
-      "authorship_tag": "ABX9TyMtUkkThXruVP/bjC9mi8gK",
+      "authorship_tag": "ABX9TyPHeC0YoLCOUTtX3v7A7R2V",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2621,22 +2621,33 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eDyBCrG5Myl-",
-        "outputId": "f76f22d6-7e61-451b-a005-97cb101d5e80"
+        "outputId": "59ff61e8-b632-4599-dba6-0906b80b4507"
       },
       "source": [
-        "y_train.unique()"
+        "y_train"
       ],
-      "execution_count": 48,
+      "execution_count": 72,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([0, 1])"
+              "45171    0\n",
+              "20857    1\n",
+              "40486    1\n",
+              "25767    1\n",
+              "31289    1\n",
+              "        ..\n",
+              "19931    1\n",
+              "14928    0\n",
+              "3941     0\n",
+              "1970     0\n",
+              "31755    1\n",
+              "Name: Cla, Length: 36560, dtype: int64"
             ]
           },
           "metadata": {},
-          "execution_count": 48
+          "execution_count": 72
         }
       ]
     },
@@ -2647,37 +2658,27 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SvBcqC-ZvmFY",
-        "outputId": "24813c99-c0c7-4aa8-db89-ab918361fb82"
+        "outputId": "db398d63-5166-4980-d430-cd5c44092fd4"
       },
       "source": [
-        "rdf = LogisticRegression(random_state=0,max_iter = 1000).fit(X, y)\n",
-        "rdf.score(X, y)"
+        "rdf = LogisticRegression(max_iter=36560)\n",
+        "rdf.fit(x_train, y_train)"
       ],
-      "execution_count": 60,
+      "execution_count": 73,
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/usr/local/lib/python3.7/dist-packages/sklearn/linear_model/_logistic.py:940: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-            "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-            "\n",
-            "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-            "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-            "Please also refer to the documentation for alternative solver options:\n",
-            "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-            "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG)\n"
-          ]
-        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.7588621444201313"
+              "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+              "                   intercept_scaling=1, l1_ratio=None, max_iter=36560,\n",
+              "                   multi_class='auto', n_jobs=None, penalty='l2',\n",
+              "                   random_state=None, solver='lbfgs', tol=0.0001, verbose=0,\n",
+              "                   warm_start=False)"
             ]
           },
           "metadata": {},
-          "execution_count": 60
+          "execution_count": 73
         }
       ]
     },
@@ -2690,7 +2691,7 @@
         "x_test = x_test.fillna(0)\n",
         "x_test = x_test.fillna(0)"
       ],
-      "execution_count": 50,
+      "execution_count": 74,
       "outputs": []
     },
     {
@@ -2700,22 +2701,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "xhq4vZtmVZ8o",
-        "outputId": "f6ca35d9-d03b-4078-ca2a-97a79fae0391"
+        "outputId": "0c0bc892-2e7f-4376-f648-0edde27f1c98"
       },
       "source": [
         "rdf.score(x_test, y_test)"
       ],
-      "execution_count": 51,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.7591073186741056"
+              "0.7717973963461328"
             ]
           },
           "metadata": {},
-          "execution_count": 51
+          "execution_count": 75
         }
       ]
     },
@@ -2728,7 +2729,7 @@
         "x_train = x_train.fillna(0)\n",
         "y_train = y_train.fillna(0)"
       ],
-      "execution_count": 52,
+      "execution_count": 76,
       "outputs": []
     },
     {
@@ -2738,22 +2739,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uHZGM7nqQOOj",
-        "outputId": "62e0d6c9-74f3-4da5-9a8a-82bcff4ab6ec"
+        "outputId": "2aa43b90-5f22-4a64-9000-5d5f70deeb2b"
       },
       "source": [
         "rdf.score(x_train, y_train)"
       ],
-      "execution_count": 53,
+      "execution_count": 77,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "0.7480579868708972"
+              "0.7639770240700219"
             ]
           },
           "metadata": {},
-          "execution_count": 53
+          "execution_count": 77
         }
       ]
     },
@@ -2924,6 +2925,32 @@
           "text": [
             "0.7388688327316486\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1VmLfm-ZuNU9",
+        "outputId": "68be56bf-3290-4ead-ad8f-c8bc4918fab8"
+      },
+      "source": [
+        "np.array(y)"
+      ],
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0, 1, 1, ..., 0, 0, 1])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 63
         }
       ]
     }
